--- a/.htaccess
+++ b/.htaccess
@@ -2,3 +2,8 @@ RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
+
+RewriteCond %{HTTP_HOST} ^www.theodorethefox.ml [NC]
+RewriteRule ^(.*)$ http://www.theodorethefox.ml/$1 [L,R=301,NC]
+
+DirectoryIndex index.html
