--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,24 @@
 src/Alt/.htaccess
 Theodore-Website.code-workspace
 private/*
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
